[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/MultiplayerLobby.gd" type="Script" id=1]

[node name="MultiplayerLobby" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtonSection" type="CenterContainer" parent="Columns"]
margin_right = 96.0
margin_bottom = 540.0

[node name="Rows" type="VBoxContainer" parent="Columns/MainButtonSection"]
margin_top = 236.0
margin_right = 96.0
margin_bottom = 304.0

[node name="HostButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_right = 96.0
margin_bottom = 20.0
text = "HOST SERVER"

[node name="StartGameButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 44.0
text = "START GAME"

[node name="JoinButton" type="Button" parent="Columns/MainButtonSection/Rows"]
margin_top = 48.0
margin_right = 96.0
margin_bottom = 68.0
text = "JOIN GAME"

[node name="InputSection" type="CenterContainer" parent="Columns"]
margin_left = 100.0
margin_right = 158.0
margin_bottom = 540.0

[node name="Rows" type="VBoxContainer" parent="Columns/InputSection"]
margin_top = 230.0
margin_right = 58.0
margin_bottom = 310.0

[node name="NameInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_right = 58.0
margin_bottom = 24.0
text = "Steve"
placeholder_text = "Name"

[node name="IPInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0
text = "80.229.16.155"
placeholder_text = "IP"

[node name="PortInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0
text = "5003"
placeholder_text = "Port"

[node name="PlayerLobbySection" type="CenterContainer" parent="Columns"]
margin_left = 162.0
margin_right = 162.0
margin_bottom = 540.0

[node name="Rows" type="VBoxContainer" parent="Columns/PlayerLobbySection"]
margin_top = 270.0
margin_bottom = 270.0
[connection signal="pressed" from="Columns/MainButtonSection/Rows/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/JoinButton" to="." method="_on_JoinButton_pressed"]
